--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "corbin_test",
+  "name": "agent_artie",
   "version": "0.1.0",
   "private": true,
   "engines": { "node": ">=18 <21" },
